fixed catkin lint ignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,9 +29,8 @@ set_target_properties(bindings
         PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_PYTHON_DESTINATION}
         )
 
-if (1)
 # catkin_lint fails to parse the target defined inside pybind11_add_module
-# catkin_lint: skip
+if (1) #catkin_lint: skip
 install(TARGETS bindings DESTINATION "${PYTHON_INSTALL_DIR}/${PROJECT_NAME}")
 endif()
 
